SERVER-66558 $sort does not rewrite to bounded sort when multiple index options are available