src/mongo/db/exec/cached_plan.cpp
@@ -134,10 +134,12 @@ Status CachedPlanStage::pickBestPlan(PlanYieldPolicy* yieldPolicy) {
 
             if (_results.size() >= numResults) {
                 // Once a plan returns enough results, stop working. There is no need to replan.
+                _bestPlanChosen = true;
                 return Status::OK();
             }
         } else if (PlanStage::IS_EOF == state) {
             // Cached plan hit EOF quickly enough. No need to replan.
+            _bestPlanChosen = true;
             return Status::OK();
         } else if (PlanStage::NEED_YIELD == state) {
             invariant(id == WorkingSet::INVALID_ID);
@@ -235,6 +237,7 @@ Status CachedPlanStage::replan(PlanYieldPolicy* yieldPolicy, bool shouldCache, s
             "query"_attr = redact(_canonicalQuery->toStringShort()),
             "planSummary"_attr = explainer->getPlanSummary(),
             "shouldCache"_attr = (shouldCache ? "yes" : "no"));
+        _bestPlanChosen = true;
         return Status::OK();
     }
 
@@ -269,6 +272,7 @@ Status CachedPlanStage::replan(PlanYieldPolicy* yieldPolicy, bool shouldCache, s
                 "query"_attr = redact(_canonicalQuery->toStringShort()),
                 "planSummary"_attr = explainer->getPlanSummary(),
                 "shouldCache"_attr = (shouldCache ? "yes" : "no"));
+    _bestPlanChosen = true;
     return Status::OK();
 }
 
